--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ ipch
 
 ## Getting files created in JSON/Schemas/Catalog/ from a VS2022 update
 JSON/
-
+install/
 ## Commonly used CMake directories
 build*/
 
